# ramon_slam

./: .gitignore  .gitmodules  README.md
ramon_base_patch/: CMakeLists.txt  README.md  package.xml
ramon_base_patch/src/: make_libraries.py
ramon_baseboard/: script_cube_ros2.sh
ramon_baseboard/stm32f4_ros/: .gitignore
ramon_baseboard/stm32f4_ros/Inc/: MPU9250.h  STM32Hardware.h  mainpp.h  tim.h
ramon_baseboard/stm32f4_ros/Src/: MPU9250.cpp  freertos.c  gps_tasks.cpp  imu_tasks.cpp  main.c  mainpp.cpp  move_tasks.cpp  stm32f4xx_hal_timebase_TIM.c  stm32f4xx_it.c  tim.c  usart.c
ramon_baseboard/stm32f4_ros2/: .mxproject  Makefile  README.md  stm32f4_ros2.ioc
ramon_calibration/: CMakeLists.txt  README.md  package.xml
ramon_calibration/bagfiles/: imu_data.bag  imu_data2.bag  mag_cal.bag  mag_cal_out.bag
ramon_calibration/include/: accel_cal.h  accel_calibration.h  accel_functor.h  accelerometer.h  allan_variance.h  generic_functor.h  gyro_cal.h  gyro_calibration.h  gyro_functor.h  gyroscope.h  imu_calibration.h  mag_calibration.h  magnetometer.h  static_detector.h
ramon_calibration/launch/: gyro_variance.launch  imu_calibration.launch
ramon_calibration/msg/: ImuWithMag.msg
ramon_calibration/src/: accel_cal.cpp  accel_calibration.cpp  accelerometer.cpp  allan_variance.cpp  gyro_cal.cpp  gyro_calibration.cpp  gyro_variance.cpp  gyroscope.cpp  imu_cal.cpp  imu_calibration.cpp  imu_calibration_main.cpp  mag_cal.cpp  mag_calibration.cpp  static_detector.cpp
ramon_msgs/: CMakeLists.txt  package.xml
ramon_simulation/: CMakeLists.txt  README.md  package.xml
ramon_simulation/bagfiles/rosbot/maze/: 2020-08-04-11-21-37.txt  2020-08-04-11-25-34.txt
ramon_simulation/bagfiles/rosbot/turtlebot_playground/: 2020-07-29-12-52-56.bag
ramon_simulation/launch/: my_world.launch
ramon_simulation/launch/rosbot/: rosbot_complete.launch  rosbot_gazebo.launch  rosbot_teleop.launch  rosbot_world.launch
ramon_simulation/urdf/rosbot/: rosbot.gazebo  rosbot.xacro
ramon_simulation/world/: empty_world.world
ramon_simulation/worlds/ramon/: house.world  house2.world  house3.world  modified.world
ramon_slam2d/: CMakeLists.txt  README.md  package.xml
ramon_slam2d/bagfiles/cartographer_records/: test3.bag
ramon_slam2d/bagfiles/casa_mercedes/: 2019-09-30_living_arriba_1hz.bag
ramon_slam2d/config/: ekf_localization.yaml
ramon_slam2d/include/: brasenham_line_algorithm.h  contour_extraction.h  map2d_utils.h  map_utils.h  mle.h  ramon_slam2d.h  slam2d.h
ramon_slam2d/launch/: lidar_transform.launch  ramon_slam2d_examples.launch  robot_localization.launch
ramon_slam2d/rviz/: lidar_map_occupancygrid.rviz  lidar_map_pointcloud.rviz
ramon_slam2d/scripts/: LineSegmentClass.m  bruteforcesearch.m  contourextraction.m  linesegment.m  myMeasurementFnc.m  occupancygrid_lidar.m  overlapregion.m  rotateandtranslate2d.m  rotateandtranslate3d.m  test.m  utnbadrone_2dslam.m  vec3subxoperator.m
ramon_slam2d/src/: brasenham_line_algorithm.cpp  main.cpp  map2d_utils.cpp  map_utils.cpp  mle.cpp  ramon_slam2d.cpp  slam2d.cpp
ramon_slam3d/: CMakeLists.txt  README.md  package.xml
ramon_slam3d/config/: ekf_localization.yaml
ramon_slam3d/include/: map3d_utils.h  slam3d.h
ramon_slam3d/info/camera_info/: 320_240_left_camera.yaml  320_240_right_camera.yaml
ramon_slam3d/info/minoru_camera_info/20200318_320x240/: left_camera.yaml  right_camera.yaml
ramon_slam3d/info/minoru_camera_info/20200318_640x480/: left_camera.yaml  right_camera.yaml
ramon_slam3d/info/minoru_camera_info/20200327_320x240/: left_camera.yaml  right_camera.yaml
ramon_slam3d/info/minoru_camera_info/2020XXXX_640x480/: 640_480_20_left_camera.yaml  right_camera.yaml
ramon_slam3d/launch/: holz_rgbd.launch  minoru_camera.launch  pcl_test.launch  ramon_slam3d_examples.launch  robot_localization.launch  stereo_calibration.launch  stereo_camera.launch  stereo_disparity.launch  stereo_pointcloud.launch
ramon_slam3d/launch/stereo_camera/: stereo_calibration.launch  stereo_pointcloud.launch
ramon_slam3d/params/minoru_camera_params/2020XXXX_640x480/: stereo_camera_params.yaml
ramon_slam3d/rviz/: camera_map_octomap.rviz  camera_map_pointcloud.rviz  camera_map_pointcloud_only.rviz  camera_map_pointcloud_path.rviz  stereo_camera.rviz
ramon_slam3d/src/: disparity.cpp  holz_rgbd.cpp  main.cpp  map3d_utils.cpp  pcl_test.cpp  slam3d.cpp
utnbadrone_2dslam/: CMakeLists.txt  package.xml
utnbadrone_2dslam/include/: mle.h  ramon_slam2d.h
utnbadrone_2dslam/launch/: lidar_transform.launch  ramon_slam2d_examples.launch
utnbadrone_2dslam/rviz/: lidar_map_occupancygrid.rviz
utnbadrone_2dslam/scripts/: bruteforcesearch.m  matlab.mat  myStateTransitionFnc.m  occupancygrid_lidar.m  point2linedist.m  point2pointdist.m  rgrowing.m  seed.m  utnbadrone_2dslam.m
utnbadrone_2dslam/src/: contour_extraction.cpp  lidar_transform.cpp  mle.cpp  ramon_slam2d.cpp
utnbadrone_base_patch/: CMakeLists.txt  package.xml
utnbadrone_baseboard/stm32f4_ros/: .extSettings  README.md  stm32f4_ros.ioc
(+41 files in other folders)
